# Platform_Game_School_Project

./: CMakeLists.txt  Character.cpp  Character.h  Character.hpp  Enemy.cpp  Enemy.hpp  GameWindow.cpp  GameWindow.hpp  Item.hpp  LoseScreen.cpp  Makefile  Map.cpp  Map.hpp  Music.cpp  Music.hpp  Platform.cpp  Platform.hpp  README.md  README.org  Sprite.cpp  Sprite.hpp  StartScreen.cpp  StartScreen.hpp  Text.cpp  Text.hpp  Timer.cpp  Timer.hpp  WinScreen.cpp  WinScreen.hpp  Window.cpp  Window.h  header.h  main.cpp
Images:Sounds/: gamedemo.mov
include/: Character.hpp  Enemy.hpp  GameWindow.hpp  LoseScreen.hpp  Music.hpp  StartScreen.hpp  Text.hpp  WinScreen.hpp
src/: Character.cpp  GameWindow.cpp  Item.cpp  LoseScreen.cpp  Map.cpp  Sprite.cpp  StartScreen.cpp  WinScreen.cpp  main.cpp
